finished initial layout

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         <div class="rightcontent">
             <div class="description left">
                 <p>This is not a real online service! Create an an account and sign in to gain
-                    access to our photo <br> editing software, Capture!
+                    access to <br> our photo editing software, Capture!
                 </p>
-                <p>Please enter all the <em>required</em> information to get started
+                <p>Please enter all the <em>required</em> information 
                 </p>
                 <p class="filler">You <em>know</em> you want to</p>
             </div>
@@ -54,6 +54,13 @@
                         <label for="confirm-password">Confirm Password</label>
                         <input type="password" name="confirm-password" id="confirm-password">
                     </div>
+                </div>
+                <div class="left button">
+                    <button type="submit">Create Account</button>
+                </div>
+                <div class="already left">
+                    <p>Already have an account?</p>
+                    <a href="#">Log in</a>
                 </div>
             </form>
 
