cleaned up unnecessary files

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 <img src="./images/camera4.png" alt="kitty" class="logopic">
                 <h1 class="name">Capture</h1>
             </div>
+         
         </div>
         <div class="rightcontent">
             <div class="description left">
@@ -60,7 +61,7 @@
                 </div>
                 <div class="already left">
                     <p>Already have an account?</p>
-                    <a href="#">Log in</a>
+                    <a href="#" class="loglink">Log in</a>
                 </div>
             </form>
 
